fixed 2 scrollbar bug

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html{
+  overflow: hidden;
+}
+
 body{
   --background-color: rgb(30,30,50);
   --divider: rgb(80,80,80);
@@ -17,6 +21,7 @@ body{
   z-index: -1;
   opacity: 0.1;
   top: -20px;
+  overflow: hidden;
 }
 
 #backgroundimages > img{
@@ -85,10 +90,6 @@ body{
   border-bottom: solid 1px var(--dividerblue);
   transition: border var(--buttontransition);
   cursor: pointer;
-}
-
-#root{
-
 }
 
 .section{
